--- a/style.css
+++ b/style.css
@@ -1,218 +1,220 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-html{
-    scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth !important;
 }
-body{
-    background-color: #0E0F10;
-    font-family: 'Josefin Sans', sans-serif;
-    overflow-x: hidden;
+body {
+  background-color: #0e0f10;
+  font-family: "Josefin Sans", sans-serif;
+  overflow-x: hidden;
 }
-h1,h2,h5{    
-    font-family: 'Raleway', sans-serif;
+h1,
+h2,
+h5 {
+  font-family: "Raleway", sans-serif;
 }
-a{
-    text-decoration: none!important;
+a {
+  text-decoration: none !important;
 }
-p{
-    font-size:18px;
+p {
+  font-size: 18px;
 }
 /* -------- header-------- */
-.logo{
-    width:150px;
+.logo {
+  width: 150px;
 }
-.green-highlight{
-    color:#25CA7F!important;
+.green-highlight {
+  color: #25ca7f !important;
 }
-.navbar-bg{
-    background-color: #111416!important;
-    opacity: .8;
+.navbar-bg {
+  background-color: #111416 !important;
+  opacity: 0.8;
 }
 .header .nav-link {
-    color: #fff!important;
-    transition: all .5s ease-in-out;
-    border-bottom: 2px solid transparent;
+  color: #fff !important;
+  transition: all 0.5s ease-in-out;
+  border-bottom: 2px solid transparent;
 }
-.header .nav-link:hover{
-    color: #25CA7F!important;
-    border-bottom: 2px solid #25CA7F;
+.header .nav-link:hover {
+  color: #25ca7f !important;
+  border-bottom: 2px solid #25ca7f;
 }
 /* ------- home ------ */
-.home-container{
-    z-index: 1;
+.home-container {
+  z-index: 1;
 }
-#particles-js{
-    width: 100%;
-    height: 100vh;
-    background-color: rgb(3, 3, 3);
-    opacity: .8;
-    z-index: -1;
+#particles-js {
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(37, 37, 37);
+  opacity: 0.8;
+  z-index: -1;
 }
-#particles-js .home-container{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+#particles-js .home-container {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
-.home h1{
-    font-size:50px; 
+.home h1 {
+  font-size: 50px;
 }
-.home h5{
-    animation: animation 4s ease infinite;
+.home h5 {
+  animation: animation 1s ease-in;
 }
-@keyframes animation{
-    from{
-        letter-spacing:35px;
-    }
-    to {
-        letter-spacing:0px;
-    }
+@keyframes animation {
+  from {
+    opacity: 0%;
+  }
+  to {
+    opacity: 100%;
+  }
 }
-.social-media a{
-    color: #fff;
-    padding: 2px 6px;
-    font-size: 28px;
-    transition: all .5s ease-in-out;    
-    animation: animation 4s ease ;
+.social-media a {
+  color: #fff;
+  padding: 2px 6px;
+  font-size: 28px;
+  transition: all 0.5s ease-in-out;
+  animation: animation 4s ease;
 }
-.social-media a:hover{
-    color: #25CA7F;
-    transform: rotate(360deg);
+.social-media a:hover {
+  color: #25ca7f;
+  transform: rotate(360deg);
 }
 /* ------- education -------- */
-.education{
-    background-color:#131419;
+.education {
+  background-color: #131419;
 }
-.single-education{
-    background-color:#131419;
-    transition: all .5s ease-in-out;
-    box-shadow: -5px -5px 10px rgba(255, 255, 255,0.05),
-     5px 5px 15px rgba(0, 0, 0,0.5);
+.single-education {
+  background-color: #131419;
+  transition: all 0.5s ease-in-out;
+  box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.05),
+    5px 5px 15px rgba(0, 0, 0, 0.5);
 }
-.single-education:hover{
-    box-shadow:inset -5px -5px 10px rgba(255, 255, 255,0.05),
-    inset 5px 5px 15px rgba(0, 0, 0,0.5);
+.single-education:hover {
+  box-shadow: inset -5px -5px 10px rgba(255, 255, 255, 0.05),
+    inset 5px 5px 15px rgba(0, 0, 0, 0.5);
 }
 /* ------ skills------ */
-.single-skill ul li{
-    background-color:#25CA7F;
-    transition: all .3s ease-in-out;
+.single-skill ul li {
+  background-color: #25ca7f;
+  transition: all 0.3s ease-in-out;
 }
-.single-skill ul li:hover{
-    background-color:#20263f;
-    cursor: pointer;
-    color:#fff;
+.single-skill ul li:hover {
+  background-color: #20263f;
+  cursor: pointer;
+  color: #fff;
 }
 /* ------- projects ------ */
-.project-card{
-    background-color: #070708;
-    box-shadow: 10px 8px 42px #adabab;
-    overflow: hidden;
+.project-card {
+  background-color: #070708;
+  box-shadow: 10px 8px 42px #adabab;
+  overflow: hidden;
 }
 .project-card img {
-    border: 5px solid #25CA7F;
-    width: 100%;
-    transition: all .8s ease-in-out;
-    overflow: hidden;
+  border: 5px solid #25ca7f;
+  width: 100%;
+  transition: all 0.8s ease-in-out;
+  overflow: hidden;
 }
-.project-card:hover img{
-    transform: scale(1.1);
+.project-card:hover img {
+  transform: scale(1.1);
 }
-.project-card a:hover{
-    color: #070708!important;
+.project-card a:hover {
+  color: #070708 !important;
 }
 .card-footer {
-    border-top: 2px solid #191919;
+  border-top: 2px solid #191919;
 }
-.project-card{    
-    box-shadow: 0 5px 5px #7a7a7a26;
-    transition: all .3s ease;
+.project-card {
+  box-shadow: 0 5px 5px #7a7a7a26;
+  transition: all 0.3s ease;
 }
 /* ----  blog area ------ */
-.blog-card{
-    background-color: #070708;
-    transition: all .5s ease-in-out;
+.blog-card {
+  background-color: #070708;
+  transition: all 0.5s ease-in-out;
 }
-.blog-card img{
-    border: 5px solid #25CA7F;
+.blog-card img {
+  border: 5px solid #25ca7f;
 }
- .blog-card:hover{
-    transform: rotate(5deg) scale(1.1);
- }
+.blog-card:hover {
+  transform: rotate(5deg) scale(1.1);
+}
 /* ------ contact-form ----- */
-.contact-area{
-    background-color: #131419;
+.contact-area {
+  background-color: #131419;
 }
-.contact-form{
-    background-color: #131419;
-    box-shadow: -5px -5px 10px rgba(255, 255, 255,0.05),
-     5px 5px 15px rgba(0, 0, 0,0.5);
+.contact-form {
+  background-color: #131419;
+  box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.05),
+    5px 5px 15px rgba(0, 0, 0, 0.5);
 }
-.contact-form .form-control, .contact-form textarea{
-    background-color: transparent;
-    border: none;
-    border-radius:0;
-    outline: none;
-    box-shadow: inset -2px -2px 6px rgba(255,255,255,0.1),
-    inset 2px 2px 6px rgba(0,0,0,0.8);
+.contact-form .form-control,
+.contact-form textarea {
+  background-color: transparent;
+  border: none;
+  border-radius: 0;
+  outline: none;
+  box-shadow: inset -2px -2px 6px rgba(255, 255, 255, 0.1),
+    inset 2px 2px 6px rgba(0, 0, 0, 0.8);
 }
-.contact-form .form-control:focus, .contact-form textarea:focus{
-    background-color: transparent;
+.contact-form .form-control:focus,
+.contact-form textarea:focus {
+  background-color: transparent;
 }
 .form-control:focus {
-    box-shadow:none;
- }
- .form-control::placeholder{
-     color: rgb(185, 185, 185);
- }
- .form-control[type="submit"]{
-    color: rgb(185, 185, 185);
-    box-shadow: -2px -2px 6px rgba(255,255,255,0.1),
-     2px 2px 6px rgba(0,0,0,0.8);
- }
- .form-control[type="submit"]:active{
-    box-shadow:inset -2px -2px 6px rgba(255,255,255,0.1),
-    inset 2px 2px 6px rgba(0,0,0,0.8);
- }
- /* ------- footer ------ */
- .footer-content{
-    border-top: 2px solid #191919;
- }
+  box-shadow: none;
+}
+.form-control::placeholder {
+  color: rgb(185, 185, 185);
+}
+.form-control[type="submit"] {
+  color: rgb(185, 185, 185);
+  box-shadow: -2px -2px 6px rgba(255, 255, 255, 0.1),
+    2px 2px 6px rgba(0, 0, 0, 0.8);
+}
+.form-control[type="submit"]:active {
+  box-shadow: inset -2px -2px 6px rgba(255, 255, 255, 0.1),
+    inset 2px 2px 6px rgba(0, 0, 0, 0.8);
+}
+/* ------- footer ------ */
+.footer-content {
+  border-top: 2px solid #191919;
+}
 
 /* ---------------- Responsive Media query start ------------ */
-    /* Extra Small devices (below 576px) */
-    @media (min-width: 320px) and (max-width: 575px) { 
-        .home h1{
-            font-size:30px; 
-        }
-        .home h5{
-            animation: animation 4s ease infinite;
-        }
-        @keyframes animation{
-            from{
-                letter-spacing:10px;
-            }
-            to {
-                letter-spacing:0px;
-            }
-        }
+/* Extra Small devices (below 576px) */
+@media (min-width: 320px) and (max-width: 575px) {
+  .home h1 {
+    font-size: 30px;
+  }
+  .home h5 {
+    animation: animation 4s ease infinite;
+  }
+  @keyframes animation {
+    from {
+      letter-spacing: 10px;
     }
+    to {
+      letter-spacing: 0px;
+    }
+  }
+}
 
-    /* Small devices (landscape phones, 576px and up) */
-    @media (min-width: 576px) and (max-width:767px){ 
-        .home h1{
-            font-size:40px; 
-        }
-    }
-    /* Medium devices (tablets, 768px and up) */
-    @media (min-width: 768px) and (max-width:991px) { 
-        
-    }
-    /* Large devices (desktops, 992px and up) */
-    @media (min-width: 992px) and (max-width:1199px) { 
-        
-    }
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) and (max-width: 767px) {
+  .home h1 {
+    font-size: 40px;
+  }
+}
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991px) {
+}
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199px) {
+}
 /* ---------------- Responsive Media query end ------------ */
